--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div>
             <h1>Welcome to our Tutoring Services</h1>
             <p>Unlock your potential with personalized tutoring</p>
-            <button class="cta-button">Book a Session</button>
+            <button class="cta-button">Book The Session</button>
         </div>
     </section>
     <section id="about">
